syntax = "proto3";

package order;

option go_package = "github.com/Sahil-Mandaliya/OrderService/proto/order";

import "proto/common/common.proto";

message Orders {
    repeated Order order = 1;
}

message Order {
    uint64 user_id = 1;
    float price = 2;
    string order_date = 3;
    bool is_deleted = 4;
}

message GetAllOrdersRequest {
}

message GetAllOrdersResponse {
	Orders orders = 1;
	common.Error error = 2;
}

message GetOrderByIdRequest {
	uint64 order_id = 1;
}

message GetOrderByIdResponse {
	Order order = 1;
	common.Error error = 2;
}